# availability-analysis-assignment-assistant

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
media/: how.mov
src/: main.rs
