[package]
name = "availability-analysis-assignment-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
eframe = { version = "0.30.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

egui_extras = {version = "0.30.0", features = ["default", "image"] }